Fixed styles on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -559,8 +559,9 @@ input:checked + .slider:before {
     }
 
     #img-credits {
-        margin: 65px 25px;
+        margin: 65px 18px 0 18px;
         text-align: left;
+        padding: 0;
     }
 
     #img-credits p {
